Fix webhooks overview page overflow bug (#1723)
Webhooks Overview page content overflows to the right. This introduces a horizontal scrollbar where one is not expected or desired. Not identified on any other pages.

Impacting all viewport widths. Present with and without new nav banner.

Also in this PR:
* Minor refactor to group media queries for Docs__article together.
* Removed redundant CSS in @media (min-width: $screen-lg)
* Added Webhooks to API section of homepage
* Added fixed-width to styleguide

--- a/app/assets/stylesheets/public/_docs.scss
+++ b/app/assets/stylesheets/public/_docs.scss
@@ -60,6 +60,17 @@ $color-green: rgb(3, 165, 98);
     margin-left: $sidebar-width + 30px;
   }
 
+  @media (min-width: $screen-lg) { // TOC as side column on larger screens
+    display: grid;
+    grid-template-columns: minmax(10px, 1fr) 250px;
+    position: relative;
+    gap: 30px;
+
+    &--is-landing-page {
+      display: block;
+    }
+  }
+
   h1, h2, h3, h4, h5 {
     font-weight: bold;
     font-family: inherit;
@@ -82,25 +93,26 @@ $color-green: rgb(3, 165, 98);
   .image, img { max-width: 100%; }
   .responsive-image-container { margin: .5rem 0 2rem 0; }
   li .responsive-image-container { margin: .5rem 0 0 0; }
+
+  table.fixed-width {
+    // In general, the width of our tables within articles depends on the size of their content. This works great except
+    // when we have text such as a HTTP response snippet that includes a long unbroken string. When that happens, the
+    // table overflows outside of its bounding box and doesn't wrap or scroll nicely, causing text cropping. Use this
+    // "fixed-width" class for a table that won't overflow it's bounding box horizontally and forces text wrapping.
+
+    table-layout: fixed;
+    width: 100%;
+    th {
+      width: 25%;
+    }
+    tr {
+      width: 75%;
+    }
+  }
 }
 
 .Docs__article .Docs__api-param-eg {
   margin: .25em 0 0 0;
-}
-
-@media (min-width: $screen-lg) { //TOC as side column on larger screens
-  .Docs__article {
-    display: grid;
-    grid-template-columns: minmax(10px, 1fr) 250px;
-    position: relative;
-    display: grid;
-    gap: 30px;
-    grid-template-columns: 1fr $sidebar-width;
-
-    &--is-landing-page {
-      display: block;
-    }
-  }
 }
 
 .Docs__note {
